--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -47,7 +47,7 @@
         </b>
         <br><br>
         <div align="center">
-         <img src="Fire Evacuation Plan.png" height="200">
+         <img src="Fire Evacuation Plan.png" height="200" width="300">
         </div>
        </td>
        <td class="col-6">
@@ -56,7 +56,7 @@
         </b>
         <br><br>
         <div align="center">
-         <img src="Fire Extinguisher.png" height="200">
+         <img src="Fire Extinguisher.png" height="200" width="300">
         </div>
        </td>
       </tr>
