--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
      <div style="align-self: ;">
-      <ul class="navbar-nav" style="font-size: 20px">
+      <ul class="navbar-nav" style="font-size: 15px">
        <li>
         <a class="text-dark" style="padding-left: 25px" href="#"> About Me </a>
        </li>
@@ -36,14 +36,14 @@
    <table class="table table-bordered" style="font-size: 20px">
      <thead>
       <tr style="background-color: #FFC11F" align="center">
-       <th colspan="2">
+       <th colspan="2" style="font-size: 30px">
         6 Ways to Prevent a Fire
        </th>
       </tr>
      </thead>
      <tbody>
       <tr style="background-color: #FE650D">
-       <td class="col-6">
+       <td class="col-md-6">
         <b>
          1. Have an escape plan in case of fire.
         </b>
@@ -52,7 +52,7 @@
          <img src="Fire Evacuation Plan.png" height="200" width="300">
         </div>
        </td>
-       <td class="col-6">
+       <td class="col-md-6">
         <b>
          2. Make sure to have a fire extinguisher at home.
         </b>
