--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -4,26 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   <style>
    .text1 {font-size: 40px}
    .text2 {font-size: 20px}
-
-.row {padding: 0px; margin: 0px}
-
-   @media (max-width: 1000px) {.row {padding: 0px; margin: 0px; display: flex; flex-direction: column-reverse;}}
   </style>
  </head>
  <body>
   <div  align="center">
-   <div>
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="align-self: ;">
+     <div style="padding-left: 850px">
       <ul class="navbar-nav" style="font-size: 15px">
        <li>
-        <a class="text-dark" style="padding-left: 750px" href="#"> About Me </a>
+        <a class="text-dark" style="padding-left: 25px" href="#"> About Me </a>
        </li>
        <li>
         <a class="text-dark" style="padding-left: 25px" href="#"> Contacts </a>
@@ -31,7 +24,6 @@
       </ul>
      </div>
     </nav>
-   </div>
    <br>
    <div class="text2" style="text-align: left">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
