--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -14,6 +14,8 @@
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
      <div style="padding-left: 850px">
+
+<div>
       <ul class="navbar-nav" style="font-size: 15px">
        <li>
         <a class="text-dark" style="padding-left: 25px" href="#"> About Me </a>
@@ -22,6 +24,8 @@
         <a class="text-dark" style="padding-left: 25px" href="#"> Contacts </a>
        </li>
       </ul>
+</div>
+
      </div>
     </nav>
    <br>
