--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -13,15 +13,15 @@
   <div  align="center">
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="padding-left: 850px">
+     <div style="padding-left: 900px">
 
 <div>
       <ul class="navbar-nav" style="font-size: 15px">
        <li>
-        <a class="text-dark" style="padding-left: 25px" href="#"> About Me </a>
+        <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
        </li>
        <li>
-        <a class="text-dark" style="padding-left: 25px" href="#"> Contacts </a>
+        <a class="text-dark" style="padding-left: 10px; padding-right: 10px" href="#"> Contacts </a>
        </li>
       </ul>
 </div>
