--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -13,10 +13,10 @@
   <div  align="center">
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="padding-left: 900px">
+     <div style="padding-left: 850px">
 
 <div>
-      <ul class="navbar-nav" style="font-size: 15px">
+      <ul class="navbar-nav" style="font-size: 20px">
        <li>
         <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
        </li>
@@ -36,7 +36,7 @@
    <table class="table table-bordered" style="font-size: 20px">
      <thead>
       <tr style="background-color: #FFC11F" align="center">
-       <th colspan="2" style="font-size: 30px">
+       <th colspan="2">
         6 Ways to Prevent a Fire
        </th>
       </tr>
