--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -29,7 +29,7 @@
      </div>
     </nav>
    <br>
-   <div class="text2" style="text-align: left">
+   <div class="text2" style="text-align: left; padding: 10px">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
    </div>
    <br>
@@ -44,7 +44,6 @@
      <tbody>
       <tr style="background-color: #FE650D">
 
-<div class="row">
        <td class="col-md-6">
         <b>
          1. Have an escape plan in case of fire.
@@ -63,7 +62,6 @@
          <img src="Fire Extinguisher.png" height="200" width="300">
         </div>
        </td>
-</div>
 
       </tr>
       <tr style="background-color: #F33C04">
