--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -11,9 +11,11 @@
  </head>
  <body>
   <div  align="center">
+
+<div class="col-md-12">    
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="padding-left: 850px">
+     <div style="padding-left: 875px">
 
 <div>
       <ul class="navbar-nav" style="font-size: 20px">
@@ -28,6 +30,8 @@
 
      </div>
     </nav>
+</div>
+
    <br>
    <div class="text2" style="text-align: left; padding: 10px">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
