--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -10,14 +10,14 @@
   </style>
  </head>
  <body>
-  <div  align="center">
+  <div class="col-md-12" align="center">
 
-<div class="col-md-12">    
+<div  style="padding: 0px; margin: 0px">    
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="padding-left: 875px">
+     <div style="padding-left: 850px">
 
-<div>
+
       <ul class="navbar-nav" style="font-size: 20px">
        <li>
         <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
@@ -26,17 +26,19 @@
         <a class="text-dark" style="padding-left: 10px; padding-right: 10px" href="#"> Contacts </a>
        </li>
       </ul>
-</div>
+
 
      </div>
     </nav>
 </div>
 
    <br>
-   <div class="text2" style="text-align: left; padding: 10px">
+   <div class="text2 col-md-12" style="text-align: left; padding: 10px">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
    </div>
    <br>
+
+<div>   
    <table class="table table-bordered" style="font-size: 20px">
      <thead>
       <tr style="background-color: #FFC11F" align="center">
@@ -110,6 +112,8 @@
       </tr>
      </tbody>
     </table>
+</div>
+
    </div>
   </div>
  </body>
