--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -12,12 +12,11 @@
  <body>
   <div class="col-md-12" align="center">
 
-<div>    
+<div  style="padding: 0px; margin: 0px">    
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
-     <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="padding-left: 800px">
+     <a style="font-size: 40px">Prevent a Fire </a>
 
-
+     <div style="padding-left: 850px">
       <ul class="navbar-nav" style="font-size: 20px">
        <li>
         <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
@@ -26,9 +25,8 @@
         <a class="text-dark" style="padding-left: 10px; padding-right: 10px" href="#"> Contacts </a>
        </li>
       </ul>
-
-
      </div>
+
     </nav>
 </div>
 
