--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -7,12 +7,13 @@
   <style>
    .text1 {font-size: 40px}
    .text2 {font-size: 20px}
+   .div1 {padding: 0px; margin: 0p}
   </style>
  </head>
  <body>
-  <div class="col-md-12" align="center">
+  <div class="div1 col-md-12" align="center">
 
-<div  style="padding: 0px; margin: 0px">    
+<div class="div2">    
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Prevent a Fire </a>
 
