--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -48,7 +48,7 @@
      <tbody>
       <tr style="background-color: #FE650D">
 
-       <td class="col-md-6">
+       <td class="col-md-6 my-sm-12">
         <b>
          1. Have an escape plan in case of fire.
         </b>
@@ -57,7 +57,7 @@
          <img src="Fire Evacuation Plan.png" height="200" width="300">
         </div>
        </td>
-       <td class="col-md-6">
+       <td class="col-md-6 my-sm-12">
         <b>
          2. Make sure to have a fire extinguisher at home.
         </b>
@@ -69,7 +69,7 @@
 
       </tr>
       <tr style="background-color: #F33C04">
-       <td class="col-6">
+       <td class="col-md-6">
         <b>
          3. Keep flammable objects away from fire and kids.
         </b>
@@ -78,7 +78,7 @@
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-6">
+       <td class="col-md-6">
         <b>
          4. Extinguish fires from candles after use.
         </b>
@@ -89,7 +89,7 @@
        </td>
       </tr>
       <tr style="background-color: #DA1F05">
-       <td class="col-6">
+       <td class="col-md-6">
         <b>
          5. Turn off your kitchen appliances after using.
         </b>
@@ -98,7 +98,7 @@
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-6">
+       <td class="col-md-6">
         <b>
          6. Unplug your appliances when not in use.
         </b>
