--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -12,31 +12,37 @@
  <body>
   <div align="center">
 
-<div class="col-md-12" style="padding: 0px; margin: 0px">    
-    <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
-     <a style="font-size: 40px">Prevent a Fire </a>
+ 
 
-     <div style="padding-left: 850px">
-      <ul class="navbar-nav" style="font-size: 20px">
-       <li>
-        <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
-       </li>
-       <li>
-        <a class="text-dark" style="padding-left: 10px; padding-right: 10px" href="#"> Contacts </a>
-       </li>
-      </ul>
-     </div>
+<nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
+  <a style="font-size: 40px">Prevent a Fire</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+   <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+   <ul class="navbar-nav" style="font-size: 20px">
+    <li class="navbar-item">
+     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">Home</a>
+    </li>
+    <li class="navbar-item">
+     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">About Me</a>
+    </li>
+    <li class="navbar-item">
+     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">Contacts</a>
+    </li>
+   </ul>
+  </div>
+   </nav>
 
-    </nav>
-</div>
+
 
    <br>
-   <div class="text2 col-md-12" style="text-align: left; padding: 10px">
+   <div class="text2 col-lg-12" style="text-align: left">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
    </div>
    <br>
 
-<div>   
+  
    <table class="table table-bordered" style="font-size: 20px">
      <thead>
       <tr style="background-color: #FFC11F" align="center">
@@ -46,30 +52,32 @@
       </tr>
      </thead>
      <tbody>
-      <tr style="background-color: #FE650D">
+      <tr class="my-sm-12" style="background-color: #FE650D">
 
-       <td class="col-md-6 my-sm-12">
+
+       <td class="col-lg-6" style="padding: 20px">
         <b>
-         1. Have an escape plan in case of fire.
+         1. Always have an escape plan in case of fire.
         </b>
         <br><br>
-        <div align="center">
+
          <img src="Fire Evacuation Plan.png" height="200" width="300">
-        </div>
+
        </td>
-       <td class="col-md-6 my-sm-12">
+       <td class="col-lg-6" style="padding: 20px">
         <b>
          2. Make sure to have a fire extinguisher at home.
         </b>
         <br><br>
-        <div align="center">
+
          <img src="Fire Extinguisher.png" height="200" width="300">
-        </div>
+         
        </td>
+
 
       </tr>
       <tr style="background-color: #F33C04">
-       <td class="col-md-6">
+       <td class="col-lg-6">
         <b>
          3. Keep flammable objects away from fire and kids.
         </b>
@@ -78,7 +86,7 @@
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-md-6">
+       <td class="col-lg-6">
         <b>
          4. Extinguish fires from candles after use.
         </b>
@@ -89,7 +97,7 @@
        </td>
       </tr>
       <tr style="background-color: #DA1F05">
-       <td class="col-md-6">
+       <td class="col-lg-6">
         <b>
          5. Turn off your kitchen appliances after using.
         </b>
@@ -98,7 +106,7 @@
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-md-6">
+       <td class="col-lg-6">
         <b>
          6. Unplug your appliances when not in use.
         </b>
@@ -110,7 +118,7 @@
       </tr>
      </tbody>
     </table>
-</div>
+
 
    </div>
   </div>
