--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -11,38 +11,27 @@
  </head>
  <body>
   <div align="center">
-
- 
-
-<nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
-  <a style="font-size: 40px">Prevent a Fire</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-   <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-   <ul class="navbar-nav" style="font-size: 20px">
-    <li class="navbar-item">
-     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">Home</a>
-    </li>
-    <li class="navbar-item">
-     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">About Me</a>
-    </li>
-    <li class="navbar-item">
-     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">Contacts</a>
-    </li>
-   </ul>
-  </div>
-   </nav>
-
-
-
+<div class="col-md-12" style="padding: 0px; margin: 0px">    
+    <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
+     <a style="font-size: 40px">Prevent a Fire </a>
+     <div style="padding-left: 850px">
+      <ul class="navbar-nav" style="font-size: 20px">
+       <li>
+        <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
+       </li>
+       <li>
+        <a class="text-dark" style="padding-left: 10px; padding-right: 10px" href="#"> Contacts </a>
+       </li>
+      </ul>
+     </div>
+    </nav>
+</div>
    <br>
-   <div class="text2 col-lg-12" style="text-align: left">
+   <div class="text2 col-md-12" style="text-align: left; padding: 10px">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
    </div>
    <br>
-
-  
+<div>   
    <table class="table table-bordered" style="font-size: 20px">
      <thead>
       <tr style="background-color: #FFC11F" align="center">
@@ -52,61 +41,49 @@
       </tr>
      </thead>
      <tbody>
-      <tr class="my-sm-12" style="background-color: #FE650D">
+      <tr style="background-color: #FE650D">
 
-
-       <td class="col-lg-6" style="padding: 20px">
+       <td class="col-md-6">
         <b>
-         1. Always have an escape plan in case of fire.
+         1. Have an escape plan in case of fire.
         </b>
-        <br><br>
 
          <img src="Fire Evacuation Plan.png" height="200" width="300">
-
+        </div>
        </td>
-       <td class="col-lg-6" style="padding: 20px">
+       <td class="col-md-6">
         <b>
          2. Make sure to have a fire extinguisher at home.
         </b>
-        <br><br>
-
-         <img src="Fire Extinguisher.png" height="200" width="300">
-         
-       </td>
 
 
       </tr>
       <tr style="background-color: #F33C04">
-       <td class="col-lg-6">
+       <td class="col-6">
         <b>
          3. Keep flammable objects away from fire and kids.
         </b>
-        <br><br>
-        <div align="center">
+
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-lg-6">
+       <td class="col-6">
         <b>
          4. Extinguish fires from candles after use.
         </b>
-        <br><br>
-        <div align="center">
-         <img src="Tagaytay.png" width="250">
-        </div>
+
        </td>
       </tr>
       <tr style="background-color: #DA1F05">
-       <td class="col-lg-6">
+       <td class="col-6">
         <b>
          5. Turn off your kitchen appliances after using.
         </b>
-        <br><br>
-        <div align="center">
+
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-lg-6">
+       <td class="col-6">
         <b>
          6. Unplug your appliances when not in use.
         </b>
