--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -7,14 +7,17 @@
   <style>
    .text1 {font-size: 40px}
    .text2 {font-size: 20px}
+   .div1 padding: 0px; margin: 0px}
   </style>
  </head>
  <body>
-  <div align="center">
-<div class="col-md-12" style="padding: 0px; margin: 0px">    
+  <div class="col-md-12" align="center">
+<div class="div1">    
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
-     <a style="font-size: 40px">Prevent a Fire </a>
+     <a style="font-size: 40px">Prevent a Fire </a>  
      <div style="padding-left: 850px">
+
+
       <ul class="navbar-nav" style="font-size: 20px">
        <li>
         <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
@@ -42,24 +45,24 @@
      </thead>
      <tbody>
       <tr style="background-color: #FE650D">
-
        <td class="col-md-6">
         <b>
          1. Have an escape plan in case of fire.
         </b>
-
+        <br><br>
+        <div align="center">
          <img src="Fire Evacuation Plan.png" height="200" width="300">
         </div>
        </td>
-       <td class="col-md-6">
-        <b>
-         2. Make sure to have a fire extinguisher at home.
-        </b>
 
 
-      </tr>
-      <tr style="background-color: #F33C04">
-       <td class="col-6">
+
+
+
+
+
+
+
         <b>
          3. Keep flammable objects away from fire and kids.
         </b>
