--- a/SA_ICT9R_Project Draft_Marte.html
+++ b/SA_ICT9R_Project Draft_Marte.html
@@ -7,34 +7,42 @@
   <style>
    .text1 {font-size: 40px}
    .text2 {font-size: 20px}
-   .div1 padding: 0px; margin: 0px}
   </style>
  </head>
  <body>
-  <div class="col-md-12" align="center">
-<div class="div1">    
-    <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
-     <a style="font-size: 40px">Prevent a Fire </a>  
-     <div style="padding-left: 850px">
+  <div align="center">
+
+ 
+
+<nav class="navbar navbar-expand-md" style="background-color: #FFF75D">
+  <a style="font-size: 40px">Prevent a Fire</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+   <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+   <ul class="navbar-nav" style="font-size: 20px">
+    <li class="navbar-item">
+     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">Home</a>
+    </li>
+    <li class="navbar-item">
+     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">About Me</a>
+    </li>
+    <li class="navbar-item">
+     <a class="navbar-link text-dark" href="#" style="padding-left: 10px; padding-right: 10px;" href="#">Contacts</a>
+    </li>
+   </ul>
+  </div>
+   </nav>
 
 
-      <ul class="navbar-nav" style="font-size: 20px">
-       <li>
-        <a class="text-dark" style="padding-left: 10px; padding-right: 10px;" href="#"> About Me </a>
-       </li>
-       <li>
-        <a class="text-dark" style="padding-left: 10px; padding-right: 10px" href="#"> Contacts </a>
-       </li>
-      </ul>
-     </div>
-    </nav>
-</div>
+
    <br>
-   <div class="text2 col-md-12" style="text-align: left; padding: 10px">
+   <div style="text-align: left">
     Fire can occur anywhere at any time. We must be ready and aware of what to do in case fire is in the building and prevent it from spreading at any moment. Here are some ways to prevent a fire.
    </div>
    <br>
-<div>   
+
+  
    <table class="table table-bordered" style="font-size: 20px">
      <thead>
       <tr style="background-color: #FFC11F" align="center">
@@ -44,49 +52,61 @@
       </tr>
      </thead>
      <tbody>
-      <tr style="background-color: #FE650D">
-       <td class="col-md-6">
+      <tr class="col-lg-12 my-sm-12" style="background-color: #FE650D">
+
+
+       <td style="padding: 20px">
         <b>
-         1. Have an escape plan in case of fire.
+         1. Always have an escape plan in case of fire.
         </b>
         <br><br>
-        <div align="center">
+
          <img src="Fire Evacuation Plan.png" height="200" width="300">
-        </div>
+
+       </td>
+       <td style="padding: 20px">
+        <b>
+         2. Make sure to have a fire extinguisher at home.
+        </b>
+        <br><br>
+
+         <img src="Fire Extinguisher.png" height="200" width="300">
+         
        </td>
 
 
-
-
-
-
-
-
-
+      </tr>
+      <tr style="background-color: #F33C04">
+       <td>
         <b>
          3. Keep flammable objects away from fire and kids.
         </b>
-
+        <br><br>
+        <div align="center">
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-6">
+       <td>
         <b>
          4. Extinguish fires from candles after use.
         </b>
-
-       </td>
-      </tr>
-      <tr style="background-color: #DA1F05">
-       <td class="col-6">
-        <b>
-         5. Turn off your kitchen appliances after using.
-        </b>
-
+        <br><br>
+        <div align="center">
          <img src="Tagaytay.png" width="250">
         </div>
        </td>
-       <td class="col-6">
+      </tr>
+      <tr style="background-color: #DA1F05">
+       <td>
+        <b>
+         5. Turn off your kitchen appliances after using.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Tagaytay.png" width="250">
+        </div>
+       </td>
+       <td>
         <b>
          6. Unplug your appliances when not in use.
         </b>
