--- a/About.html
+++ b/About.html
@@ -16,18 +16,18 @@
      
 <button type="button" class="btn dropdown-toggle" id="id2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20"></button>
     <div class="dropdown-menu" aria-labelledby="id2">
-      <a class="dropdown-item" href="2.html">Home</a>
-      <a class="dropdown-item" href="About2.html">About</a>
-      <a class="dropdown-item" href="Concerns2.html">Concerns</a>
+      <a class="dropdown-item" href="SA_ICT9R_Project_Marte.html">Home</a>
+      <a class="dropdown-item" href="About.html">About</a>
+      <a class="dropdown-item" href="Concerns.html">Concerns</a>
 </div>
 
      <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
        <li>
-        <a class="nav-link text-dark" style="padding-left: 10px; padding-right: 10px" href="2.html">Home</a>
+        <a class="nav-link text-dark" style="padding-left: 10px; padding-right: 10px" href="SA_ICT9R_Project_Marte.html">Home</a>
        </li>
        <li>
-        <a class="nav-link text-dark" style="padding-left: 10px; padding-right: 10px" href="About2.html">About</a>
+        <a class="nav-link text-dark" style="padding-left: 10px; padding-right: 10px" href="About.html">About</a>
        </li>
        <li>
         <a class="nav-link text-dark" style="padding-left: 10px; padding-right: 10px" href="Concerns.html">Concerns</a>
