--- a/SA_ICT9R_Project_Marte.html
+++ b/SA_ICT9R_Project_Marte.html
@@ -75,11 +75,11 @@
       <tr style="background-color: #F33C04">
        <td>
         <b>
-         3. Keep flammable objects away from fire and kids.
+         3. Keep children and flammable materials away from fire.
         </b>
         <br><br>
         <div align="center">
-         <img src="Tagaytay.png">
+         <img src="Fire.png">
         </div>
        </td>
       </tr>
@@ -112,7 +112,7 @@
         </b>
         <br><br>
         <div align="center">
-         <img src="Tagaytay.png">
+         <img src="Unplug.png">
         </div>
        </td>
       </tr>
@@ -123,8 +123,14 @@
  </body>
  <!--
   References:
-  https://www.safetyresources.com/safety-blog/10-ways-you-can-prevent-a-fire-today
-  https://www.mapfre.com.mt/blog/home/tips-to-prevent-fires/
-  https://www.redcross.org/about-us/news-and-events/news/2020/15-ways-to-avoid-a-fire-in-your-home.html
+  10 WAYS YOU CAN PREVENT A FIRE TODAY. (n.d.). [Digital Image]. Safetyresources. Retrieved from https://www.safetyresources.com/safety-blog/10-ways-you-can-prevent-a-fire-today
+
+  6 Tips to Prevent Fires from Happening in Your Home. (n.d.). [Digital Image]. Mapfre. Retrieved from https://www.mapfre.com.mt/blog/home/tips-to-prevent-fires/
+
+  15 Ways to Avoid a Fire in Your Home. (2020). [Digital Image]. Redcross. Retrieved from https://www.redcross.org/about-us/news-and-events/news/2020/15-ways-to-avoid-a-fire-in-your-home.html
+
+  HOW TO PREVENT FIRE IN YOUR HOME. (n.d.). [Digital Image]. Staysafe. Retrieved from https://staysafe.org/how-to-prevent-fire-in-your-home/
+
+  Borromeo, H. (2021). Let’s TEACH OUR KIDS about FIRE SAFETY [Digital Image]. Sanclementetar. Retrieved from https://sanclementetarlac.gov.ph/lets-teach-our-kids-about-fire-safety-3/
  -->
 </html>
