--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
     </nav>
     <br>
     <div class="text2" style="text-align: left; padding: 20px">
-     Fire can occur anywhere at any time. It is important to be ready and aware of what to do in case fire is in the building, and always do our best to prevent fire from spreading. Here are some ways to prevent a fire.
+     Fire can occur anywhere at any time. Since March is Fire Prevention Month, we want you to be aware that fire prevention is very crucial. It is important to be ready and aware of what to do in case fire is in the building, and always do our best to prevent fire from spreading. Here are some ways to prevent a fire.
     </div>
    </div>
   </div>
