--- a/SA_ICT9R_Project_Marte.html
+++ b/SA_ICT9R_Project_Marte.html
@@ -90,7 +90,7 @@
         </b>
         <br><br>
         <div align="center">
-         <img src="Tagaytay.png">
+         <img src="Extinguish.png">
         </div>
        </td>
       </tr>
@@ -101,7 +101,7 @@
         </b>
         <br><br>
         <div align="center">
-         <img src="Tagaytay.png">
+         <img src="Off.png">
         </div>
        </td>
       </tr>
@@ -123,14 +123,18 @@
  </body>
  <!--
   References:
-  10 WAYS YOU CAN PREVENT A FIRE TODAY. (n.d.). [Digital Image]. Safetyresources. Retrieved from https://www.safetyresources.com/safety-blog/10-ways-you-can-prevent-a-fire-today
-
   6 Tips to Prevent Fires from Happening in Your Home. (n.d.). [Digital Image]. Mapfre. Retrieved from https://www.mapfre.com.mt/blog/home/tips-to-prevent-fires/
+
+  10 WAYS YOU CAN PREVENT A FIRE TODAY. (n.d.). [Digital Image]. Safetyresources. Retrieved from https://www.safetyresources.com/safety-blog/10-ways-you-can-prevent-a-fire-today
 
   15 Ways to Avoid a Fire in Your Home. (2020). [Digital Image]. Redcross. Retrieved from https://www.redcross.org/about-us/news-and-events/news/2020/15-ways-to-avoid-a-fire-in-your-home.html
 
+  Borromeo, H. (2021). Let’s TEACH OUR KIDS about FIRE SAFETY [Digital Image]. Sanclementetar. Retrieved from https://sanclementetarlac.gov.ph/lets-teach-our-kids-about-fire-safety-3/
+
   HOW TO PREVENT FIRE IN YOUR HOME. (n.d.). [Digital Image]. Staysafe. Retrieved from https://staysafe.org/how-to-prevent-fire-in-your-home/
 
-  Borromeo, H. (2021). Let’s TEACH OUR KIDS about FIRE SAFETY [Digital Image]. Sanclementetar. Retrieved from https://sanclementetarlac.gov.ph/lets-teach-our-kids-about-fire-safety-3/
+  Stickley, A. (2022). How to Turn off Gas to a Stove at the Shutoff Valve [Digital Image]. Thespruce. Retrieved from https://www.thespruce.com/shutting-off-gas-to-the-stove-2718660
+
+  WikiHow Staff. (2022). How to Extinguish a Candle [Digital Image]. Wikihow. Retrieved from https://www.wikihow.com/Extinguish-a-Candle
  -->
 </html>
