--- a/Concerns.html
+++ b/Concerns.html
@@ -7,18 +7,21 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+   img {width: 300px; height: 200px}
+  </style>
  </head>
  <body>
   <div>
    <div style="align: center; font-size: 20px">
     <nav class="navbar navbar-expand-md navbar-success" style="background-color: #FFF75D">
      <a style="font-size: 40px">Fire Safety</a>
-     <button type="button" class="btn dropdown-toggle" id="id2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20"></button>
-     <div class="dropdown-menu" aria-labelledby="id2">
+     <button type="button" class="btn dropdown-toggle" id="id1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20"></button>
+     <div class="dropdown-menu" aria-labelledby="id1">
       <a class="dropdown-item" href="SA_ICT9R_Project_Marte.html">Home</a>
       <a class="dropdown-item" href="About.html">About</a>
       <a class="dropdown-item" href="Concerns.html">Concerns</a>
-     </div>
+     </div>    
      <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
        <li>
@@ -34,23 +37,104 @@
      </div>
     </nav>
     <br>
-    <div style="padding: 20px">
-     <p>Have any questions? Feedback? Don't worry. We got you!</p>
-     <br>
-     <form style="background-color: #A10100; padding: 20px" class="text-light">
-      <div class="form-group">
-       <label>Email:</label>
-       <input type="text" class="form-control">
-      </div>
-      <div class="form-group">
-       <label>Concern:</label>
-       <textarea class="form-control"></textarea>
-      </div>
-      <button type="reset" class="btn btn-info">Clear</button>
-      <button type="submit" class="btn btn-info">Send</button>
-     </form>
+    <div style="text-align: left; padding: 20px">
+     Fire can occur anywhere at any time. It is important to be ready and aware of what to do in case fire is in the building, and always do our best to prevent fire from spreading. Here are some ways to prevent a fire.
     </div>
+    <br>
+    <table class="table table-bordered">
+     <thead style="background-color: #FFC11F">
+      <tr align="center">
+       <th colspan="2">
+        6 Ways to Prevent a Fire
+       </th>
+      </tr>
+     </thead style="padding: 10px">
+     <tbody>
+      <tr style="background-color: #FE650D">
+       <td>
+        <b>
+         1. Have an escape plan in case of fire.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Fire Evacuation Plan.png">
+        </div>
+       </td>
+      </tr>
+      <tr style="background-color: #FE650D">
+       <td>
+        <b>
+         2. Make sure to have a fire extinguisher at home.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Fire Extinguisher.png">
+        </div>
+       </td>
+      </tr>
+      <tr style="background-color: #F33C04">
+       <td>
+        <b>
+         3. Keep children and flammable materials away from fire.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Fire.png">
+        </div>
+       </td>
+      </tr>
+      <tr style="background-color: #F33C04">
+       <td>
+        <b>
+         4. Extinguish fires from candles after use.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Extinguish.png">
+        </div>
+       </td>
+      </tr>
+      <tr style="background-color: #DA1F05">
+       <td>
+        <b>
+         5. Turn off your kitchen appliances after using.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Off.png">
+        </div>
+       </td>
+      </tr>
+      <tr style="background-color: #DA1F05">
+       <td>
+        <b>
+         6. Unplug your appliances when not in use.
+        </b>
+        <br><br>
+        <div align="center">
+         <img src="Unplug.png">
+        </div>
+       </td>
+      </tr>
+     </tbody>
+    </table>
    </div>
   </div>
  </body>
+ <!--
+  References:
+  6 Tips to Prevent Fires from Happening in Your Home. (n.d.). [Digital Image]. Mapfre. Retrieved from https://www.mapfre.com.mt/blog/home/tips-to-prevent-fires/
+
+  10 WAYS YOU CAN PREVENT A FIRE TODAY. (n.d.). [Digital Image]. Safetyresources. Retrieved from https://www.safetyresources.com/safety-blog/10-ways-you-can-prevent-a-fire-today
+
+  15 Ways to Avoid a Fire in Your Home. (2020). [Digital Image]. Redcross. Retrieved from https://www.redcross.org/about-us/news-and-events/news/2020/15-ways-to-avoid-a-fire-in-your-home.html
+
+  Borromeo, H. (2021). Let’s TEACH OUR KIDS about FIRE SAFETY [Digital Image]. Sanclementetar. Retrieved from https://sanclementetarlac.gov.ph/lets-teach-our-kids-about-fire-safety-3/
+
+  HOW TO PREVENT FIRE IN YOUR HOME. (n.d.). [Digital Image]. Staysafe. Retrieved from https://staysafe.org/how-to-prevent-fire-in-your-home/
+
+  Stickley, A. (2022). How to Turn off Gas to a Stove at the Shutoff Valve [Digital Image]. Thespruce. Retrieved from https://www.thespruce.com/shutting-off-gas-to-the-stove-2718660
+
+  WikiHow Staff. (2022). How to Extinguish a Candle [Digital Image]. Wikihow. Retrieved from https://www.wikihow.com/Extinguish-a-Candle
+ -->
 </html>
